# sound-nest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: .env.local
backend/core/: settings.py  urls.py
backend/song_explorer/: apps.py  models.py  serializers.py  urls.py  views.py
backend/song_explorer/migrations/: 0001_initial.py  0002_savedsong_track_rating_alter_savedsong_id.py
backend/src/soundnest_app/: __init__.py
backend/users/: authentication.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/explore-songs/: page.tsx
frontend/app/password-reset/: page.tsx
frontend/components/common/: Footer.tsx  List.tsx  LoadingProgress.tsx  NavLink.tsx  Navbar.tsx  Ratings.tsx  SliderBar.tsx  Spinner.tsx  Table.tsx  TextInput.tsx  Tooltip.tsx  index.ts
frontend/components/forms/: Form.tsx  GetPredictionsForm.tsx  Input.tsx  LoginForm.tsx  PasswordResetConfirmForm.tsx  PasswordResetForm.tsx  RegisterForm.tsx  index.ts
frontend/components/table/: GetRecommendationTable.tsx  index.ts
frontend/components/utils/: RequireAuth.tsx  Setup.tsx
frontend/hooks/: index.ts  update-track-ratings.ts  use-delete-saved-songs.ts  use-login.ts  use-predict-attributes.ts  use-register.ts  use-reset-password-confirm.ts  use-reset-password.ts  use-save-songs.ts  use-song-recommender.ts  use-verify.ts
frontend/redux/: store.ts
frontend/schemas/: auth.ts  predictions.ts  songs.ts
(+9 files in other folders)
